# HACK-NATION

./: PRD.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: __init__.py  settings.py
backend/app/database/: __init__.py  supabase_client.py
backend/app/routes/: __init__.py  committee.py  founders.py  health.py  nl_search.py  outreach.py  research.py
backend/app/schemas/: committee.py  founders.py  nl_search.py  outreach.py
backend/app/services/: __init__.py  cold_start_scoring.py  committee.py  committee_repo.py  committee_runner.py  deck_intake.py  diligence.py  founder_scoring.py  founder_search.py  founder_synthesis.py  founders_repo.py  github_analysis.py  memo.py  nl_search.py  outreach.py  research_pipeline.py  scheduler.py  screening.py  sourcing_scheduler.py  trust_layer.py
backend/app/tools/: __init__.py  openai_client.py  tavily_client.py
backend/supabase/migrations/: 0002_founder_scores.sql
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/lib/: ai-backend.ts
frontend/styles/: animations.css  base.css  main.css  utilities.css
supabase/: README.md
supabase/migrations/: 0001_init.sql  0003_committee.sql  0004_opportunity_scores.sql  0005_investment_memos.sql  0006_founder_actions.sql  0007_diligence_gaps.sql  0008_opportunity_score_outlook_trend.sql  0009_deck_storage_bucket.sql  0010_founder_memory_more_categories.sql  0011_portfolio.sql  0012_founder_avatar.sql  0013_multi_tenant.sql
(+55 files in other folders)
