[project]
name = "hack-nation-backend"
version = "0.1.0"
description = "Backend for HACK-NATION"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "tavily-python",
    "httpx",
    "python-dotenv",
    "pydantic",
    "supabase",
    "loguru",
    "python-multipart",
    "apscheduler",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pytest",
]
